# kip-sequential

./: .gitignore  CMakeLists.txt  README.md
AoS/: .gitignore  CMakeLists.txt  README.md
AoS/data/: kip_sequential_release.csv
AoS/src/expt/: main.cpp  profile.cpp
AoS/src/expt/timer/: SteadyTimer.h
AoS/src/image/: Image.cpp
AoS/src/image/reader/: STBImageReader.cpp
AoS/tests/: CMakeLists.txt  KernelFactoryTest.cpp  STBImageReaderTest.cpp
SoA/: CMakeLists.txt  README.md
SoA/src/: HighResolutionTimer.h  Image.h  ImageProcessing.h  ImageReader.cpp  ImageReader.h  KernelFactory.h  STBImageReader.h  Timer.h  main.cpp
SoA/src/expt/timer/: HighResolutionTimer.h  Timer.h
SoA/src/image/: Image.cpp  Image.h
SoA/src/image/reader/: ImageReader.h  STBImageReader.h
SoA/src/kernel/: KernelFactory.cpp  KernelFactory.h
SoA/src/processing/: ImageProcessing.cpp  ImageProcessing.h
SoA/tests/: CMakeLists.txt  ImageProcessingTest.cpp  ImageTest.cpp  KernelTest.cpp  STBImageReaderTest.cpp
data/: kip_sequential_debug.csv
imgs/output/: .gitignore
src/: EdgeExtender.cpp  EdgeExtender.h  EdgeHandler.cpp  EdgeHandler.h  Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h  ImageReader.h  Kernel.cpp  Kernel.h  KernelFactory.cpp  KernelFactory.h  Pixel.cpp  Pixel.h  STBImageReader.cpp  STBImageReader.h  SteadyTimer.cpp  SteadyTimer.h  Timer.cpp  main.cpp  profile.cpp
src/expt/: main.cpp  profile.cpp
src/expt/timer/: HighResolutionTimer.cpp
src/image/: Image.h  Pixel.cpp
src/kernel/: Kernel.cpp
tests/: CMakeLists.txt  EdgeExtenderTest.cpp  ImageProcessingTest.cpp  ImageTest.cpp  KernelFactoryTest.cpp  KernelTest.cpp  PixelTest.cpp  STBImageReaderTest.cpp
